feat: trade history controller
