# src/main/kotlin/com/valrTechassessment/models/BuySellSideEnum.kt
@@ -1,0 +1,20 @@
+package com.valrTechassessment.models
+
+import com.valrTechassessment.SellBuySide
+import kotlinx.serialization.SerialName
+
+enum class BuySellSideEnum(
+    val side: SellBuySide,
+    val string: String
+) {
+    @SerialName("sell")
+    SELL(
+        SellBuySide.SELL,
+        "sell"
+    ),
+    @SerialName("buy")
+    BUY(
+        SellBuySide.BUY,
+        "buy"
+    )
+}
